k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: eva02
  labels:
    app: postgres
spec:
  clusterIP: None  # Necesario para StatefulSet
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: postgres
